--- a/17_Tour/Views/Home/Index.cshtml
+++ b/17_Tour/Views/Home/Index.cshtml
@@ -20,6 +20,9 @@
     <meta name="description" content="@commonInfo.Desc" />
 
 }
+@section healthHtml{
+    <a href="/"><img src="/assets/img/HeaderImg.png" style="width: 100%;"></a>
+}
 <div class="container-fluid">
     <div class="row">
         @if (ViewData["slide"] != null)
@@ -115,7 +118,7 @@
                     </div>
 
                     <div class="@(isMobile?"col-md-12":"col-8") col-xs-12" id="hanhTrinh-carousel">
-                        <div id="hanhTrinh2-img" class="row owl-carousel-4 owl-carousel  owl-theme box-slide caroucel-style2">
+                        <div id="hanhTrinh2-img" class="owl-carousel-4 owl-carousel  owl-theme box-slide caroucel-style2">
 
                             @foreach (var subItem in productList.Item)
                             {
@@ -188,52 +191,59 @@
 
         </div>
     </div>
-    <div id="thuVien" class="home-mau-xam" style="padding-top: 8%;padding-bottom: 8%;">
-        <div id="thuVienText" class="text-center" style="margin-bottom: 3%;margin-top: -3%;">
-            <h2 class="font-bold-play-fair" style="padding: 0;">Thư Viện</h2>
-            <p style="padding-bottom: 0;">Ảnh Và Video Cuộc Hành Trình</p><img class="gach-xanh" src="/assets/img/gach-xanh.png">
-        </div>
-        <div id="thuVienCards">
-            <div class="carousel slide" data-ride="carousel" id="carousel-2">
-                <div class="carousel-inner" role="listbox">
-                    <div class="carousel-item active d-inline-flex">
-                        <div class="row owl-carousel-4 box-slide" style="margin-right: 1%;margin-left: 1%;">
-                            @if (ViewData["thuvien"] != null)
-                            {
 
-                                SearchResult productList = (SearchResult)ViewData["thuvien"];
-                                foreach (var item in productList.Item)
+    <div id="thuVien" class="home-mau-xam row" style="padding-top: 8%;padding-bottom: 8%;">
+        <div class="col-12">
+            <div id="thuVienText" class="text-center" style="margin-bottom: 3%;margin-top: -3%;">
+                <h2 class="font-bold-play-fair" style="padding: 0;">Thư Viện</h2>
+                <p style="padding-bottom: 0;">Ảnh Và Video Cuộc Hành Trình</p><img class="gach-xanh" src="/assets/img/gach-xanh.png">
+            </div>
+        </div>
+        <div class="col-12">
+            <div id="thuVienCards">
+                <div class="carousel slide" data-ride="carousel" id="carousel-2">
+                    <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item active d-inline-flex">
+                            <div class="row owl-carousel-4 box-slide" style="margin-right: 1%;margin-left: 1%;">
+                                @if (ViewData["thuvien"] != null)
                                 {
-                                    <div class="tv-card-item item">
-                                        <div class="bg-white">
-                                            <a href="@item.TagLink">
-                                                <img class="tv-card-img" src="@item.Images">
-                                            </a>
-                                            <div class="tv-card-text">
-                                                <h5 class="font-bold-play-fair" style="margin-bottom: 0;">@item.PrName</h5>
-                                                <div class="row" style="margin: 0;">
-                                                    <p style="margin-bottom: 0;width: 50%;padding-bottom:10%;">@item.Tag</p>
+
+                                    SearchResult productList = (SearchResult)ViewData["thuvien"];
+                                    foreach (var item in productList.Item)
+                                    {
+                                        <div class="tv-card-item item">
+                                            <div class="bg-white">
+                                                <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)">
+                                                    <img class="tv-card-img" src="@item.Images">
+                                                </a>
+                                                <div class="tv-card-text">
+                                                    <h5 class="font-bold-play-fair" style="margin-bottom: 0;">@item.PrName</h5>
+                                                    <div class="row" style="margin: 0;">
+                                                        <p style="margin-bottom: 0;width: 50%;padding-bottom:10%;">@item.Tag</p>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
+                                    }
+
+
                                 }
 
 
-                            }
-
-
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div>
-                    @*<a class="carousel-control-prev" href="#carousel-2" role="button" data-slide="prev"><span class="carousel-control-prev-icon"></span><span class="sr-only">Previous</span></a><a class="carousel-control-next" href="#carousel-2" role="button"
-                        data-slide="next"><span class="carousel-control-next-icon"></span><span class="sr-only">Next</span></a>*@
-                </div>
+                    <div>
+                        @*<a class="carousel-control-prev" href="#carousel-2" role="button" data-slide="prev"><span class="carousel-control-prev-icon"></span><span class="sr-only">Previous</span></a><a class="carousel-control-next" href="#carousel-2" role="button"
+                    data-slide="next"><span class="carousel-control-next-icon"></span><span class="sr-only">Next</span></a>*@
+                    </div>
 
+                </div>
             </div>
         </div>
+       
     </div>
+
     <div id="chiaSe-camNhan" class="text-center" style="padding-bottom: 5%;">
         <h2 class="font-bold-play-fair" style="padding-top: 7%;margin-bottom: 7%;">Chia Sẻ &amp; Cảm Nhận</h2>
         <div id="chiaSe-camNhan-content">
@@ -274,10 +284,142 @@
         <div id="cscn-boder" style="margin-right: 5%;margin-left: 5%;"></div>
     </div>
 </div>
+@section footerHtml{
+    <div class="text-center" id="amz-info">
+        <div id="amz-info-btc" class="text-center">
+            <h4 class="font-bold-play-fair" style="padding-bottom: 1%;">Ban Tổ Chức</h4><img class="col-1" src="/assets/img/btc.png" style="padding-bottom: 3%;">
+        </div><img class="gach-xanh" src="/assets/img/gach-xanh.png" style="padding-bottom: 1%;">
+        <div id="amz-info-doiTac" class="text-center" style="padding-top: 2%;">
+            <h4 class="font-bold-play-fair" style="padding-bottom: 1%;">Đối Tác</h4>
+            <div class="justify-content-center align-items-center row" style="padding-bottom: 1%;">
+                <img class="col-2" src="/assets/img/dt1.jpg" style="width: 20%;">
+                <img class="col-2" src="/assets/img/dt2.jpg" style="width: 20%;">
+                <img class="col-2" src="/assets/img/dt3.jpg" style="width: 20%;">
+                <img class="col-2" src="/assets/img/dt4.jpg" style="width: 20%;">
+            </div>
+        </div>
+        <img class="gach-xanh" src="/assets/img/gach-xanh.png" style="padding-bottom: 3%;">
+        <div id="amz-info-ntt" class="text-center" style="padding-bottom: 5%;">
+            <h4 class="font-bold-play-fair" style="padding-bottom: 1%;">Nhà tài trợ</h4>
+            <div data-ride="carousel" class="carousel" id="carousel-3">
+                <div role="listbox" class="carousel-inner">
+                    <div class="carousel-item" id="6">
+                        <div class="align-items-center row">
+                            <img id="img1" class="col-2" src="/assets/img/ntt1.jpg" />
+                            <img id="img2" class="col-2" src="/assets/img/ntt2.jpg" />
+                            <img id="img3" class="col-2" src="/assets/img/ntt3.jpg" />
+                            <img id="img4" class="col-2" src="/assets/img/ntt4.jpg" />
+                            <img id="img5" class="col-2" src="/assets/img/ntt5.jpg" />
+                            <img id="img6" class="col-2" src="/assets/img/ntt6.jpg" />
+                        </div>
+                    </div>
+                    <div class="carousel-item" id="7">
+                        <div class="align-items-center row">
+                            <img id="img2" class="col-2" src="/assets/img/ntt2.jpg" />
+                            <img id="img3" class="col-2" src="/assets/img/ntt3.jpg" />
+                            <img id="img4" class="col-2" src="/assets/img/ntt4.jpg" />
+                            <img id="img5" class="col-2" src="/assets/img/ntt5.jpg" />
+                            <img id="img6" class="col-2" src="/assets/img/ntt6.jpg" />
+                            <img id="img7" class="col-2" src="/assets/img/ntt7.jpg" />
+                        </div>
+                    </div>
+                    <div class="carousel-item" id="8">
+                        <div class="align-items-center row">
+                            <img id="img3" class="col-2" src="/assets/img/ntt3.jpg" />
+                            <img id="img4" class="col-2" src="/assets/img/ntt4.jpg" />
+                            <img id="img5" class="col-2" src="/assets/img/ntt5.jpg" />
+                            <img id="img6" class="col-2" src="/assets/img/ntt6.jpg" />
+                            <img id="img7" class="col-2" src="/assets/img/ntt7.jpg" />
+                            <img id="img8" class="col-2" src="/assets/img/ntt8.jpg" />
+                        </div>
+                    </div>
+                    <div class="carousel-item active" id="9">
+                        <div class="align-items-center row">
+                            <img id="img4" class="col-2" src="/assets/img/ntt4.jpg" />
+                            <img id="img5" class="col-2" src="/assets/img/ntt5.jpg" />
+                            <img id="img6" class="col-2" src="/assets/img/ntt6.jpg" />
+                            <img id="img7" class="col-2" src="/assets/img/ntt7.jpg" />
+                            <img id="img8" class="col-2" src="/assets/img/ntt8.jpg" />
+                            <img id="img9" class="col-2" src="/assets/img/ntt9.jpg" />
+                        </div>
+                    </div>
+                    <div class="carousel-item" id="10">
+                        <div class="align-items-center row">
+                            <img id="img5" class="col-2" src="/assets/img/ntt5.jpg" />
+                            <img id="img6" class="col-2" src="/assets/img/ntt6.jpg" />
+                            <img id="img7" class="col-2" src="/assets/img/ntt7.jpg" />
+                            <img id="img8" class="col-2" src="/assets/img/ntt8.jpg" />
+                            <img id="img9" class="col-2" src="/assets/img/ntt9.jpg" />
+                            <img id="img10" class="col-2" src="/assets/img/ntt10.jpg" />
+                        </div>
+                    </div>
+                    <div class="carousel-item" id="1">
+                        <div class="align-items-center row">
+                            <img id="img6" class="col-2" src="/assets/img/ntt6.jpg" />
+                            <img id="img7" class="col-2" src="/assets/img/ntt7.jpg" />
+                            <img id="img8" class="col-2" src="/assets/img/ntt8.jpg" />
+                            <img id="img9" class="col-2" src="/assets/img/ntt9.jpg" />
+                            <img id="img10" class="col-2" src="/assets/img/ntt10.jpg" />
+                            <img id="img1" class="col-2" src="/assets/img/ntt1.jpg" />
+                        </div>
+                    </div>
+                    <div class="carousel-item" id="2">
+                        <div class="align-items-center row">
+                            <img id="img7" class="col-2" src="/assets/img/ntt7.jpg" />
+                            <img id="img8" class="col-2" src="/assets/img/ntt8.jpg" />
+                            <img id="img9" class="col-2" src="/assets/img/ntt9.jpg" />
+                            <img id="img10" class="col-2" src="/assets/img/ntt10.jpg" />
+                            <img id="img1" class="col-2" src="/assets/img/ntt1.jpg" />
+                            <img id="img2" class="col-2" src="/assets/img/ntt2.jpg" />
+                        </div>
+                    </div>
+                    <div class="carousel-item" id="3">
+                        <div class="align-items-center row">
+                            <img id="img8" class="col-2" src="/assets/img/ntt8.jpg" />
+                            <img id="img9" class="col-2" src="/assets/img/ntt9.jpg" />
+                            <img id="img10" class="col-2" src="/assets/img/ntt10.jpg" />
+                            <img id="img1" class="col-2" src="/assets/img/ntt1.jpg" />
+                            <img id="img2" class="col-2" src="/assets/img/ntt2.jpg" />
+                            <img id="img3" class="col-2" src="/assets/img/ntt3.jpg" />
+                        </div>
+                    </div>
+                    <div class="carousel-item" id="4">
+                        <div class="align-items-center row">
+                            <img id="img9" class="col-2" src="/assets/img/ntt9.jpg" />
+                            <img id="img10" class="col-2" src="/assets/img/ntt10.jpg" />
+                            <img id="img1" class="col-2" src="/assets/img/ntt1.jpg" />
+                            <img id="img2" class="col-2" src="/assets/img/ntt2.jpg" />
+                            <img id="img3" class="col-2" src="/assets/img/ntt3.jpg" />
+                            <img id="img4" class="col-2" src="/assets/img/ntt4.jpg" />
+                        </div>
+                    </div>
+                    <div class="carousel-item" id="5">
+                        <div class="align-items-center row">
+                            <img id="img10" class="col-2" src="/assets/img/ntt10.jpg" />
+                            <img id="img1" class="col-2" src="/assets/img/ntt1.jpg" />
+                            <img id="img2" class="col-2" src="/assets/img/ntt2.jpg" />
+                            <img id="img3" class="col-2" src="/assets/img/ntt3.jpg" />
+                            <img id="img4" class="col-2" src="/assets/img/ntt4.jpg" />
+                            <img id="img5" class="col-2" src="/assets/img/ntt5.jpg" />
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <a href="#carousel-3" role="button" data-slide="prev" class="carousel-control-prev">
+                        <span aria-hidden="true"></span><span class="sr-only">Previous</span>
+                    </a>
+                    <a href="#carousel-3" role="button" data-slide="next" class="carousel-control-next">
+                        <span aria-hidden="true"></span><span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+}
 @section scripts {
     <style>
-        .showMore{
-            display:none;
+        .showMore {
+            display: none;
         }
     </style>
     <script>
