--- a/17_Tour/html/assets/css/styles.css
+++ b/17_Tour/html/assets/css/styles.css
@@ -30,9 +30,10 @@
 }
 
 .upText {
-  padding-top: 10%;
-  padding-left: 1%;
-  padding-right: 1%;
+    padding-top: 10%;
+    padding-left: 1%;
+    padding-right: 1%;
+    transition: padding-top 1s;
 }
 
 .upText:hover {
