--- a/16_Shop_MultiProduct/Views/Home/Index.cshtml
+++ b/16_Shop_MultiProduct/Views/Home/Index.cshtml
@@ -745,7 +745,7 @@
     <div class="wpb_column vc_column_container">
         <div class="vc_column-inner">
             <div class="wpb_wrapper">
-                <div class="ovic-slide  rows-space-0  ovic_custom_5c92fe3eaf742 vc_custom_1547456628930 ">
+                <div class="row ovic-slide  rows-space-0  ovic_custom_5c92fe3eaf742 vc_custom_1547456628930 ">
                     <div class="ovic-slide-style2">
                         <div class="owl-slick col-sm-12" data-slick={&quot;arrows&quot;:true,&quot;slidesMargin&quot;:0,&quot;dots&quot;:false,&quot;infinite&quot;:false,&quot;speed&quot;:300,&quot;slidesToShow&quot;:5,&quot;rows&quot;:1} data-responsive=[{&quot;breakpoint&quot;:1500,&quot;settings&quot;:{&quot;slidesToShow&quot;:5}},{&quot;breakpoint&quot;:1200,&quot;settings&quot;:{&quot;slidesToShow&quot;:4}},{&quot;breakpoint&quot;:992,&quot;settings&quot;:{&quot;slidesToShow&quot;:3}},{&quot;breakpoint&quot;:768,&quot;settings&quot;:{&quot;slidesToShow&quot;:2}},{&quot;breakpoint&quot;:480,&quot;settings&quot;:{&quot;slidesToShow&quot;:1}}]>
                             @if (ViewData["Ads3"] != null)
