--- a/17_Tour/Views/Home/Contact.cshtml
+++ b/17_Tour/Views/Home/Contact.cshtml
@@ -20,7 +20,7 @@
 }
 <div class="font-gotham" style="background: #292929; color:#fff;padding-top:10vh;padding-bottom:10vh">
     <div class="d-xl-flex justify-content-xl-center" style="margin-left: 10%;margin-right:10%;">
-        <div class="contact-clean" style="width: 50%;padding:3% 5%;background: #3c3c3c">
+        <div class="contact-clean col-md-6 col-xs-12" style="padding:3% 5%;background: #3c3c3c">
             <form method="post">
                 <h4 class="text-left" style="margin-bottom: 3vh;">Liên Hệ Với Chúng Tôi</h4>
                 <div class="form-group">
@@ -140,6 +140,9 @@
     </script>
 }
 <style type="text/css">
+    .row.footer{
+        margin-top:1px;
+    }
     iframe {
         width: 100%;
     }
