--- a/17_Tour/Views/Product/Index.cshtml
+++ b/17_Tour/Views/Product/Index.cshtml
@@ -22,8 +22,8 @@
         <link rel="canonical" href="@ViewBag.WebsiteUrl" />
         <link href="//cdn.anpero.com/cdn/plugins/fancybox-3/src/css/core.css" rel="stylesheet" />
         <link href="//cdn.anpero.com/cdn/plugins/fancybox-3/src/css/fullscreen.css" rel="stylesheet" />
-        <link rel="stylesheet" type="text/css" href="/assets/SamsungGrid/css/normalize.css" />
-        <link rel="stylesheet" type="text/css" href="/assets/SamsungGrid/css/component.css" />
+        @*<link rel="stylesheet" type="text/css" href="/assets/SamsungGrid/css/normalize.css" />
+        <link rel="stylesheet" type="text/css" href="/assets/SamsungGrid/css/component.css" />*@
 
     }
     @section Styles {
@@ -43,98 +43,6 @@
             }
         </style>
     }
-
-    <div id="ht-anh" class="container-fluid" style="margin-top: 7vh;">
-        <div id="ht-anh-carousel" class="carousel slide" data-ride="carousel" data-interval="5000">
-            <div class="carousel-inner row w-100 mx-auto" role="listbox">
-
-
-
-
-
-
-
-
-
-
-
-
-                <div class="carousel-item col-md-3">
-                    <div class="panel panel-default">
-                        <div class="panel-thumbnail">
-                            <a class="thumb">
-                                <img class="img-fluid mx-auto d-block" src="https://lh3.googleusercontent.com/pjannm6Vf3pb2brenFLHscUUfA1DfNlCPLBTGPxBLeUV_qFtEbk_UmqPUAlMq2PtzixBPaQ5SL9gRkwXxMKV2UZ0pBHJCVUIXTbeYEBBG_9W9xKC9RKs9YqbjI0-MwPXk9LuxGZ7mSLvp1dwyfxAfsx7qvdSL7kEwk5BJrNDT4CEi_NuP3W7upg6c0B43es4boYIjO32m0O7QC6KToig5uGb7-9SyeMKzVOtC5OwSMXgyRoYT1aCphSVRRSB9F8wyqYBVITFuoDIC-zs_g7_aSAD6iK1UDorPtfwZz1Z2PEu4ik5jvdCv8qgByj1HKf1v0XFZjMpuNMtycui7mGXwQEZPokq2JBU3AhWt-u3rHtB0WUwf9ge28rQFWG2I-M59WPSGhsMrSF21IhmqZawQrllFcQ6QNzf0sIM41PoFSj81eydu7EClzWjtDiB-X93_QybvYNJsaNaQxZq6upjeQTQEiPB7AvPjmGPbT2KCrSpY6Ue6B1CBCBYnwtSrCUGdwfvmqBJ9dCpSYKqCF9Bw1pOLIhSUgVt0ixevKV0k_ZOH-1DK5qTDqJohrweiHvzpPOzoG1QRVDYzjy9V8PhmY4pOcrwUzArNn5Uyg_bbTjApbKZEI1YL6opweFbgVjOBD259lg-r17ilHJtKy7egIoIB0Fl6T7w8SSCSniqhJLRd9R_vGwf_li_ZISdiGkwJpSh-1eNZyOY9Ue2Ackzx9IzCj7KGCQA8RmPN-AJPfvQoEw=w1119-h757-no">
-                            </a>
-                        </div>
-                    </div>
-                </div><div class="carousel-item col-md-3">
-                    <div class="panel panel-default">
-                        <div class="panel-thumbnail">
-                            <a class="thumb">
-                                <img class="img-fluid mx-auto d-block" src="https://tinyurl.com/rm65lm7">
-                            </a>
-                        </div>
-                    </div>
-                </div><div class="carousel-item col-md-3">
-                    <div class="panel panel-default">
-                        <div class="panel-thumbnail">
-                            <a class="thumb">
-                                <img class="img-fluid mx-auto d-block" src="https://lh3.googleusercontent.com/QaLBTgiAxMgauA_DPEv_7w0gpNVsvIuQcDf98laWTxcvnzHNqYhCtJK3m_VOuIGqwd1VG-CPndt03HWvlddqMj1TwLCISyY7ExteZuWA9U2uWP1x63GMkqQBnc-fNo7uncBGmYK4aYYjlZYXUChpO1ItaQf_57kGrAWSxBjeWKBLgDF4Lp1suZVK0zAFpc4ZEIS4TcLuvjKho34yB-INu8gt8GaUvIget5fApJN1NOSRR_dmMZXCRMY__CIT9imGTe6EJcE9ALhJAZilD44f0HIE2dHJ3iHdRB1xyhfRzEshGc7kPGSaZvEcu66D-WKrLhs2u8lVXCHhgCI06qaJ0E4Qxzo8hRzlToH25ms0ncGq6ZNtca5WV8MVwQC_qzIAw79I84gwZIBJJnMi8PIknYAbF_Ty_9gXnP7k5cZA2PvpG8zljonxLyJIrKiSSRHmCHoOG9g_F1SEPD6CSjfydBrVexx2iWvZDSS3eQGpfTtDmX2ZuNeNfSpRq9lnMBnpDn4ZtMBTT2WPtfjxORViI3MUPRkPf9tR3WIjc75gZdaa8WLrJDoloN98f6J9WPPpw3bdcAibtEPAEdUpKdgMxsy9qleHBz-8TWMwqtzH5vpTBhPDMWg7hk_-A9b7pYdtyNHFDKoot58X-1mnF2kCMJDSx1BUiXAlAbj2z4kbcMw7c1MZcFHIjl-BZEIiqCTi5Wkp3Eq7uKPFgiS_1i5C1tqqDtuE3V7wjUoKwTfyY2w1e-Y=w1124-h757-no">
-                            </a>
-                        </div>
-                    </div>
-                </div><div class="carousel-item col-md-3 active carousel-item-left">
-                    <div class="panel panel-default">
-                        <div class="panel-thumbnail">
-                            <a class="thumb">
-                                <img class="img-fluid mx-auto d-block" src="https://lh3.googleusercontent.com/4UZVNyIEKtdPZNt-1y7Rp1F1LnpOZYLayrvY9e5OH-vIBXKx3s7yIh11VvDww0lrEZeCU3vDcg0A4HI7MheXF-nqglaqlA6czkNOTHABoUXyigo3ZMdEY1Ys3HfPOLjW2x_OmdbDImONpc2sJfKNRiZJJ20NjjgiQIw15Gkhjv5R9mcMYFssGA0OE2ovyDm9BmbW3Sx7_iPsFi3QnapWzo9r2RnYN6S7BxxRBdUwaqnNjsofPbbucd9b_nm1aI3vwAvLsG8u_OEMpmcxWTZf_-YVqwzvCOjNJMRnM-mo-snTEAkTxC9ss7ahY_yctMxxj39y2zdbGR-yIdkT3qFRddWP34njlNHchHeZKsu2PBh3tCqAPvARMzLU8hL8yUCTcMFeeCAm_DM_w1MCpJ61uC3hhK45ZujQMSDvgvAK5I27IJ5NlFOCoFgS1xmDjUkSwSBI9C8hWcCVdv1AzAinXAU7llD9BHRmTaI7rkLqEThbcyVHsZSGzdHly0M0VMVaqoMPwyfMdWQXIupGTaBP6xBBEXVerpjPyufU6mHyeXIHz9aD5uOL4oUlOwtoaW5lHgj9Iw5LsPC7DDzRsWjEgkJr8kWKvI9LBpLXXKh0wjXL6FCbcxPS3TyjJ8ci0Q94RZPs1yMgbl6VDddP8Ek8pSr9BVW3q_eAiqLrLayiuVxlzzf_CvQhQaMzkq46nyyTnrxs463GtVtubuTcanUHolRe37xEiEmJ-pjpPNuOhVKbGzg=w1137-h757-no">
-                            </a>
-                        </div>
-                    </div>
-                </div><div class="carousel-item col-md-3 carousel-item-next carousel-item-left">
-                    <div class="panel panel-default">
-                        <div class="panel-thumbnail">
-                            <a class="thumb">
-                                <img class="img-fluid mx-auto d-block" src="https://lh3.googleusercontent.com/iEQtYBrWwZvjysokQoZPrNVUbvKQ4nPyNhlSIbfwloQ6rqiBwkH0YcpbgeP1-dRP7hrQSTFXYL2V-1zQIBAdl85CCFY84herQzCOItC2cbwHL5Qu5EIBD2WQ0at7exIWnZX-3XFkcvdrTq_SZmT0GtVGhSPEKUQYb0PtYKjDZZW0bf2zArBV9Hqyw9DqLKXGx0aIhoE_W6rZoFtqjh4_Q3Q5WUdB877i44iyJiU4dGCWNU2J2q2HZSsLNXLwnsqo8uiZVhHeToLrrQsngEDtmCYEv7wRGGZsy2iCMfi0sYmwAQn4JoCqDAc5YlnuXU16AJMaFwf44cbjiDrc5V_pOiOqH6HSpO60GUNDtO86ugXhWENzcQwG3ewNkK7gD8FWMFHxbzNzt0sne8W_pVNkw01bpJQ4CBe2pWjjkgqBSHV4S7sMy2cvpzJafHuk2v7S7cZQDGlHo0EBpMKfOQOlw1PwRWujBd351fxBc8ard-9nGZ25F5WYqn3vUBc3E-8RRJO6qSzIr42doqiOhPXoADCJvxkFfhMB0OvYOXoLUgERaj_6pxXdJfn2JrrKN02rYppCcABWYVFTH36zuOR7Gn7wKT_46KEDLLMw1jh5OXT4rgnk1hEJuiPHoR_7mp3FJApHqANiG87gx0ALfGQ6Zs-jxuNYzklwERXNiunMwZAY13NNhGyjSFg4kiQmFbN8-rLF9rCGtjWyeUeH7octbvtC4hWjurgIOZAZ-kALv3Znq5c=w1119-h757-no">
-                            </a>
-                        </div>
-                    </div>
-                </div><div class="carousel-item col-md-3">
-                    <div class="panel panel-default">
-                        <div class="panel-thumbnail">
-                            <a class="thumb">
-                                <img class="img-fluid mx-auto d-block" src="https://lh3.googleusercontent.com/AtNh8OTtvJJcLCPEn0P2MuU-FsvS79IjKIcnr9RWR2v8803QTz0YZIzKzg8At9cURkF-jJotQFM1XmKPFMe43rDrrk_-shVhouxHtsOJaNf7jYc1ew4VQin5K6Qya51cpKiHaSsvCJ_ti1nVZ89E1ac5sncDk_Usq-47B7VHRA-C4zaya9vD4NT1N0pmSUGKpvI4GmshrtQ935ndt4dHKx8ck8zGcn_D7bVht7WdIwaFeTtMsODip-gfsHeg0E68fkkepJQEBPaCdE5g3h3T3WqymXYz6C8FjXOkEH3E40ItJ6jSHkbKYtXYob9iGmVfuyGEU-XYFhwZROmNBmkoS7PjbsrXTBJd-SCLNze3lTdtGRXTQGqKUcCHvYJMUQnITRW1m9sfuqgfHg_do-l8XhKgGaXzrVUwYKa0_jLqSitMpvt6txhmodVT7vVvS8-N-95umCHWnNBHZHcKvSN8AB6j5wMcoqhxO8jRXi8FCz4QWWeKWNKhlLd2JjA8j2EpJ_CipIN3lcA_QiFlv8jL7hBxiA6lSTO74KIv8Z7w6pRWL75-7FBT1YCKEM4S2pmINfUXDPWNa8BvpRaGQcmSV74OaPJt23MaeCREqweBqqs0MOJpeTxe6mgMLpbhWhnxBQlvQbufp4UEVVcoB8QClYwQWhOxjJNpLy8NVd7mnIwJf12OH4HlXnqS1vudcdPXa5ezxae8klgim2pU9cspvkVZDyD_Xz3UvFx-Skzz2D7pdWs=w1136-h757-no">
-                            </a>
-                        </div>
-                    </div>
-                </div><div class="carousel-item col-md-3">
-                    <div class="panel panel-default">
-                        <div class="panel-thumbnail">
-                            <a class="thumb">
-                                <img class="img-fluid mx-auto d-block" src="https://lh3.googleusercontent.com/UtVA3AgdN4oRZ8nFrEgSEct5XznnAMp7s1oDrnPV4Ldgzox-tzI_YeRnDhS705otZf0mCl7U0ync6i0BR4cDo0DcWMXQ94lkP0Ht8KIYZFKQcraVJ8lbGTxUlnO_yr4E57amrmDmWEwiNJVi_jm8StyjT9GBi6P_bBTOp32rPuSYtX-L1bVv4bQWa-_6wULtQB0oFchTcj9apOHwVfOc-I4yZ9dXI-Kd_BPwS_-C3TBsp_bYmvLekqKcxidmkWGzGOkiM-8hCd454ffvnOKIRNYRr0VdSEeuxnCNLza-X97bxKATfmr5lPiFmLlpF_DYlTrW2-OjuuoQTMV3Ng-y-RhwSVW6ZWjC6P_ltDoJrE4Gnoh2aW8JFvEyqVb-iKuA7MnuvMIf9vbTbS34t8e6tT_AQ-0at-6mmZ96DKN7EF7DUK5HklkMJAQF_gPu6GQtvnE4yyPF1pbbuFqvWwQ5nW3_Qw-4a-uHZpE4ymFXqzPHlV-xMevOodXkpDnBvPezQ9jXA5DfE1NCJv1tyyMSWcY9t6d9y-_p2V6KeJB2uzmMXdnuTreWG8ho7znH839f6woifgJTv0Jq8Xy9Ywmvfk3UaoZePApYEG6nLER9-_e6lGEB9zZb8VtPpNTegEKFy7CDqhcWHJ6sHbIZY7tzYgiayFH1SUKa9Ne_muktgQLtOwujGJHhrbmdYBj48xvBPVOgKBqDo1UOWape1zWNeY3A15bHHh9ymu6kcf18ptHAfiY=w1140-h757-no">
-                            </a>
-                        </div>
-                    </div>
-                </div><div class="carousel-item col-md-3">
-                    <div class="panel panel-default">
-                        <div class="panel-thumbnail">
-                            <a class="thumb">
-                                <img class="img-fluid mx-auto d-block" src="https://lh3.googleusercontent.com/MuD0NI543PQmH6RWbY4LZQWB0dCHEJOw3HR3serNGFdfh76TYX9HsauDTyHs864y9AGqas25btcvtmnkWpfcxgy_iNZmy6Fh9AiFh2cO-OUb33Ar2Z5RDbPPe4adBxBkqci2IeCXaXazghZkls01JiFw6oZrixJxFBpY_6IxbuZwZd0SjYTWTfJcoE6H5qH4EHWh6mQ1m2ld946GaKNoMNBAjI-h4dy9R1s_lnP-fy0tzxEiWEbcGh56H05TwNzOsKOhbbMdadN-MQXVcc1a4yn4J5qvJCTPuU-8Uf6kR002oSpJHAR8AT-XrYJGcOm77aLHtmCjXteGnuTDOnO-CBDMTpbBW-xUJafnIIHCpOMqBKO0ZtlCie3eiyfbtFBIiRIXULqjSlEYWnnj_-ZEVQS0uIrrxNbzPza_OQ9kKVA8rsjCxGoAsu4p4MueEVDL8Qlq0a7BCdyFcS9edBk6fxP0TTYNr0H7su4FXa3rsWhZH9Z8XCd2xx4vranT3-Z_fVZpo2kOYGAfu5QnDT6WUABhrJtKX2bdDfCqn7AGkJL2HnzS9I9WjUNBIywGoFPDiclDWXoiEgS1vmd2K9NwokONCb9hP2Ga24nhCaXx8LzC5cJHJczq3TnKZn_Fm0LBBYP6mjxD-pszeiNhmiINGvbTsrGRCFd9u7W3PWnw6IXXKhm-9vhq0KGUt6oOJ88i20-KFuInR2uY127r6Y1rKz0b_r_IdiqIUvyjhbeH7fM31Gg=w1099-h757-no">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#ht-anh-carousel" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next text-faded" href="#ht-anh-carousel" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
-    </div>
     @Html.Raw(item.Detail)
     if (item.ImagesSlide != null && item.ImagesSlide.Length > 0)
     {
@@ -145,34 +53,34 @@
             </div>
 
             <section class="grid-wrap" id="tab-description">
-                <ul class="grid swipe-right" id="grid">
+                <div class="grid swipe-right owl-carousel-4 box-slide d-inline-flex" id="grid" >
 
                     @foreach (var imagesSlide in item.ImagesSlide)
                     {
 
-                        <li><a href="@imagesSlide" class="fancybox" data-fancybox="gallery" rel="gallery" data-type="image"><img src="@imagesSlide" alt="@item.PrName" style="height:300px;"></a></li>
+                        <div class="item" style="padding-right:10px;padding-left:10px;"><a href="@imagesSlide" class="fancybox" data-fancybox="gallery" rel="gallery" data-type="image"><img src="@imagesSlide" alt="@item.PrName"></a></div>
                     }
 
-                </ul>
+                </div>
             </section>
 
         </div>
     }
     @section scripts{
         @Html.Raw(item.Script)
-        <script src="/assets/SamsungGrid/js/modernizr.custom.js"></script>
+        @*<script src="/assets/SamsungGrid/js/modernizr.custom.js"></script>*@
         <script src="//cdn.anpero.com/cdn/plugins/fancybox-3/dist/jquery.fancybox.min.js"></script>
-        <script src="/assets/SamsungGrid/js/colorfinder-1.1.js"></script>
+        @*<script src="/assets/SamsungGrid/js/colorfinder-1.1.js"></script>
         <script src="/assets/SamsungGrid/js/masonry.pkgd.min.js"></script>
         <script src="/assets/SamsungGrid/js/imagesloaded.pkgd.min.js"></script>
-        <script src="/assets/SamsungGrid/js/classie.js"></script>
+        <script src="/assets/SamsungGrid/js/classie.js"></script>*@
 
-        <script src="/assets/SamsungGrid/js/gridScrollFx.js"></script>
+        @*<script src="/assets/SamsungGrid/js/gridScrollFx.js"></script>*@
         <script>
             $(document).ready(function () {
-                new GridScrollFx(document.getElementById('grid'), {
-                    viewportFactor: 0.4
-                });
+                //new GridScrollFx(document.getElementById('grid'), {
+                //    viewportFactor: 0.4
+                //});
                 $(".fancybox").fancybox({
                     openEffect: 'none',
                     closeEffect: 'none'
