--- a/17_Tour/Views/Home/Index.cshtml
+++ b/17_Tour/Views/Home/Index.cshtml
@@ -88,7 +88,7 @@
     <div style="padding-top: 4%;padding-bottom: 4%;">
         <h2 class="text-center font-bold-play-fair"> Các Hoạt Động <br> Của một hành trình </h2><img class="gach-xanh" src="/assets/img/gach-xanh.png" style="margin-left: 49%;">
     </div>
-    <div class="col-12 row hanhTrinh-hoatDong" style="padding: 0;margin: 0px;">
+    <div class="row hanhTrinh-hoatDong">
         @if (ViewData["ads3"] != null)
         {
             Ads[] adsList = (Ads[])ViewData["ads3"];
@@ -105,38 +105,35 @@
             }
         }
     </div>
-    <div id="hanhTrinh" class="hanhTrinh">
+    <div id="hanhTrinh" class="hanhTrinh home-mau-xam row">
         @if (commonInfo.ProductCategoryList.Length > 0)
         {
             var product = commonInfo.ProductCategoryList.Where(x => x.Id == 1082).FirstOrDefault();
             SearchResult productList = (SearchResult)ViewData["hanhtrinh"];
-            <div class="row">
-                <div class="@(isMobile?"":"d-inline-flex") col-12  home-mau-xam ">
-                    <div id="hanhTrinh2-text" class="@(isMobile?"col-md-12":"col-4") hanhTrinh-text" style="padding-top: 5%;padding-right: 8%;padding-left: 8%;padding-bottom: 5%;">
-                        <h2 class="font-bold-play-fair" style="margin: 0px;padding-bottom: 2%;">@product.Name</h2><img class="gach-xanh" src="/assets/img/gach-xanh.png" style="padding-bottom: 13%;">
-                        @Html.Raw(product.Description)
-                    </div>
-                    <div class="@(isMobile?"col-md-12":"col-8") col-xs-12" id="hanhTrinh-carousel">
 
-                        <div id="hanhTrinh2-img" class="row owl-carousel-4 owl-carousel  owl-theme box-slide caroucel-style2">
-                            @foreach (var subItem in productList.Item)
-                            {
-                                <div class="upText item">
-                                    <a href="@Anpero.StringHelpper.GetProductLink(subItem.PrName,subItem.Id)" style="width: 100%;">
-                                        <img class="upText-img" src="@subItem.Images" style="width: 100%;">
-                                    </a>
-                                    <div class="upText-Text" style="padding: 0;margin: 0;">
-                                        <p style="margin: 0;margin-top: 5px;">@subItem.Tag</p>
-                                        <div class="row" style="margin: 0;">
-                                            <h5 class="font-bold-play-fair" style="width: 70%;">@subItem.PrName</h5>
-                                        </div>
-                                    </div>
-                                </div>
-                            }
+            <div id="hanhTrinh2-text" class="col-md-4 col-xs-12  hanhTrinh-text">
+                <h2 class="font-bold-play-fair">@product.Name</h2>
+                <img class="gach-xanh" src="/assets/img/gach-xanh.png" style="padding-bottom: 13%;">
+                @Html.Raw(product.Description)
+            </div>
+            <div class="col-md-8 col-xs-12">
+
+                <div class="owl-carousel-4 box-slide owl-carousel owl-theme d-inline-flex" style="overflow:hidden;">
+                    @foreach (var subItem in productList.Item)
+                    {
+                        <div class="upText item">
+                            <a href="@Anpero.StringHelpper.GetProductLink(subItem.PrName,subItem.Id)">
+                                <img class="upText-img w-100" src="@subItem.Images">
+                            </a>
+                            <div class="upText-Text">
+                                <p>@subItem.Tag</p>
+                                <h5 class="font-bold-play-fair">@subItem.PrName</h5>
+                            </div>
                         </div>
-                    </div>
+                    }
                 </div>
             </div>
+
         }
 
     </div>
@@ -233,13 +230,13 @@
                     </div>
                     <div>
                         @*<a class="carousel-control-prev" href="#carousel-2" role="button" data-slide="prev"><span class="carousel-control-prev-icon"></span><span class="sr-only">Previous</span></a><a class="carousel-control-next" href="#carousel-2" role="button"
-                    data-slide="next"><span class="carousel-control-next-icon"></span><span class="sr-only">Next</span></a>*@
+                            data-slide="next"><span class="carousel-control-next-icon"></span><span class="sr-only">Next</span></a>*@
                     </div>
 
                 </div>
             </div>
         </div>
-       
+
     </div>
 
     <div id="chiaSe-camNhan" class="text-center" style="padding-bottom: 5%;">
@@ -285,120 +282,60 @@
 @section footerHtml{
     <div class="text-center" id="amz-info">
         <div id="amz-info-btc" class="text-center">
-            <h4 class="font-bold-play-fair" style="padding-bottom: 1%;">Ban Tổ Chức</h4><img class="col-1" src="/assets/img/btc.png" style="padding-bottom: 3%;">
-        </div><img class="gach-xanh" src="/assets/img/gach-xanh.png" style="padding-bottom: 1%;">
+            <h4 class="font-bold-play-fair" style="padding-bottom: 1%;">Ban Tổ Chức</h4>
+            
+                @if (ViewData["ads6"] != null)
+                {
+                    Ads[] adsList = (Ads[])ViewData["ads6"];
+                    if (adsList.Length > 0)
+                    {
+                        foreach (var item in adsList)
+                        {
+                            <img class="col-1" src="@item.ImagesUrl">
+                        }
+                    }
+                }
+            
+        </div>
+        <img class="gach-xanh" src="/assets/img/gach-xanh.png" style="padding-bottom: 1%;">
         <div id="amz-info-doiTac" class="text-center" style="padding-top: 2%;">
             <h4 class="font-bold-play-fair" style="padding-bottom: 1%;">Đối Tác</h4>
-            <div class="justify-content-center align-items-center row" style="padding-bottom: 1%;">
-                <img class="col-2" src="/assets/img/dt1.jpg" style="width: 20%;">
-                <img class="col-2" src="/assets/img/dt2.jpg" style="width: 20%;">
-                <img class="col-2" src="/assets/img/dt3.jpg" style="width: 20%;">
-                <img class="col-2" src="/assets/img/dt4.jpg" style="width: 20%;">
+            <div class="justify-content-center align-items-center row box-slide" style="padding-bottom: 1%;">
+                <div class="owl-carousel-4">
+                    @if (ViewData["ads4"] != null)
+                    {
+                        Ads[] adsList = (Ads[])ViewData["ads4"];
+                        if (adsList.Length > 0)
+                        {
+                            foreach (var item in adsList)
+                            {
+                                <img class="col-12" src="@item.ImagesUrl">
+                            }
+                        }
+                    }
+                </div>
             </div>
         </div>
         <img class="gach-xanh" src="/assets/img/gach-xanh.png" style="padding-bottom: 3%;">
         <div id="amz-info-ntt" class="text-center" style="padding-bottom: 5%;">
             <h4 class="font-bold-play-fair" style="padding-bottom: 1%;">Nhà tài trợ</h4>
-            <div data-ride="carousel" class="carousel" id="carousel-3">
+            <div data-ride="carousel" class="carousel">
                 <div role="listbox" class="carousel-inner">
-                    <div class="carousel-item" id="6">
-                        <div class="align-items-center row">
-                            <img id="img1" class="col-2" src="/assets/img/ntt1.jpg" />
-                            <img id="img2" class="col-2" src="/assets/img/ntt2.jpg" />
-                            <img id="img3" class="col-2" src="/assets/img/ntt3.jpg" />
-                            <img id="img4" class="col-2" src="/assets/img/ntt4.jpg" />
-                            <img id="img5" class="col-2" src="/assets/img/ntt5.jpg" />
-                            <img id="img6" class="col-2" src="/assets/img/ntt6.jpg" />
-                        </div>
-                    </div>
-                    <div class="carousel-item" id="7">
-                        <div class="align-items-center row">
-                            <img id="img2" class="col-2" src="/assets/img/ntt2.jpg" />
-                            <img id="img3" class="col-2" src="/assets/img/ntt3.jpg" />
-                            <img id="img4" class="col-2" src="/assets/img/ntt4.jpg" />
-                            <img id="img5" class="col-2" src="/assets/img/ntt5.jpg" />
-                            <img id="img6" class="col-2" src="/assets/img/ntt6.jpg" />
-                            <img id="img7" class="col-2" src="/assets/img/ntt7.jpg" />
-                        </div>
-                    </div>
-                    <div class="carousel-item" id="8">
-                        <div class="align-items-center row">
-                            <img id="img3" class="col-2" src="/assets/img/ntt3.jpg" />
-                            <img id="img4" class="col-2" src="/assets/img/ntt4.jpg" />
-                            <img id="img5" class="col-2" src="/assets/img/ntt5.jpg" />
-                            <img id="img6" class="col-2" src="/assets/img/ntt6.jpg" />
-                            <img id="img7" class="col-2" src="/assets/img/ntt7.jpg" />
-                            <img id="img8" class="col-2" src="/assets/img/ntt8.jpg" />
-                        </div>
-                    </div>
-                    <div class="carousel-item active" id="9">
-                        <div class="align-items-center row">
-                            <img id="img4" class="col-2" src="/assets/img/ntt4.jpg" />
-                            <img id="img5" class="col-2" src="/assets/img/ntt5.jpg" />
-                            <img id="img6" class="col-2" src="/assets/img/ntt6.jpg" />
-                            <img id="img7" class="col-2" src="/assets/img/ntt7.jpg" />
-                            <img id="img8" class="col-2" src="/assets/img/ntt8.jpg" />
-                            <img id="img9" class="col-2" src="/assets/img/ntt9.jpg" />
-                        </div>
-                    </div>
-                    <div class="carousel-item" id="10">
-                        <div class="align-items-center row">
-                            <img id="img5" class="col-2" src="/assets/img/ntt5.jpg" />
-                            <img id="img6" class="col-2" src="/assets/img/ntt6.jpg" />
-                            <img id="img7" class="col-2" src="/assets/img/ntt7.jpg" />
-                            <img id="img8" class="col-2" src="/assets/img/ntt8.jpg" />
-                            <img id="img9" class="col-2" src="/assets/img/ntt9.jpg" />
-                            <img id="img10" class="col-2" src="/assets/img/ntt10.jpg" />
-                        </div>
-                    </div>
-                    <div class="carousel-item" id="1">
-                        <div class="align-items-center row">
-                            <img id="img6" class="col-2" src="/assets/img/ntt6.jpg" />
-                            <img id="img7" class="col-2" src="/assets/img/ntt7.jpg" />
-                            <img id="img8" class="col-2" src="/assets/img/ntt8.jpg" />
-                            <img id="img9" class="col-2" src="/assets/img/ntt9.jpg" />
-                            <img id="img10" class="col-2" src="/assets/img/ntt10.jpg" />
-                            <img id="img1" class="col-2" src="/assets/img/ntt1.jpg" />
-                        </div>
-                    </div>
-                    <div class="carousel-item" id="2">
-                        <div class="align-items-center row">
-                            <img id="img7" class="col-2" src="/assets/img/ntt7.jpg" />
-                            <img id="img8" class="col-2" src="/assets/img/ntt8.jpg" />
-                            <img id="img9" class="col-2" src="/assets/img/ntt9.jpg" />
-                            <img id="img10" class="col-2" src="/assets/img/ntt10.jpg" />
-                            <img id="img1" class="col-2" src="/assets/img/ntt1.jpg" />
-                            <img id="img2" class="col-2" src="/assets/img/ntt2.jpg" />
-                        </div>
-                    </div>
-                    <div class="carousel-item" id="3">
-                        <div class="align-items-center row">
-                            <img id="img8" class="col-2" src="/assets/img/ntt8.jpg" />
-                            <img id="img9" class="col-2" src="/assets/img/ntt9.jpg" />
-                            <img id="img10" class="col-2" src="/assets/img/ntt10.jpg" />
-                            <img id="img1" class="col-2" src="/assets/img/ntt1.jpg" />
-                            <img id="img2" class="col-2" src="/assets/img/ntt2.jpg" />
-                            <img id="img3" class="col-2" src="/assets/img/ntt3.jpg" />
-                        </div>
-                    </div>
-                    <div class="carousel-item" id="4">
-                        <div class="align-items-center row">
-                            <img id="img9" class="col-2" src="/assets/img/ntt9.jpg" />
-                            <img id="img10" class="col-2" src="/assets/img/ntt10.jpg" />
-                            <img id="img1" class="col-2" src="/assets/img/ntt1.jpg" />
-                            <img id="img2" class="col-2" src="/assets/img/ntt2.jpg" />
-                            <img id="img3" class="col-2" src="/assets/img/ntt3.jpg" />
-                            <img id="img4" class="col-2" src="/assets/img/ntt4.jpg" />
-                        </div>
-                    </div>
-                    <div class="carousel-item" id="5">
-                        <div class="align-items-center row">
-                            <img id="img10" class="col-2" src="/assets/img/ntt10.jpg" />
-                            <img id="img1" class="col-2" src="/assets/img/ntt1.jpg" />
-                            <img id="img2" class="col-2" src="/assets/img/ntt2.jpg" />
-                            <img id="img3" class="col-2" src="/assets/img/ntt3.jpg" />
-                            <img id="img4" class="col-2" src="/assets/img/ntt4.jpg" />
-                            <img id="img5" class="col-2" src="/assets/img/ntt5.jpg" />
+                    <div class="justify-content-center align-items-center row box-slide" style="padding-bottom: 1%;">
+
+                        <div class="owl-carousel-6">
+
+                            @if (ViewData["ads5"] != null)
+                            {
+                                Ads[] adsList = (Ads[])ViewData["ads5"];
+                                if (adsList.Length > 0)
+                                {
+                                    foreach (var item in adsList)
+                                    {
+                                        <img class="col-12 item" src="@item.ImagesUrl">
+                                    }
+                                }
+                            }
                         </div>
                     </div>
                 </div>
