--- a/17_Tour/Views/Product/Index.cshtml
+++ b/17_Tour/Views/Product/Index.cshtml
@@ -23,7 +23,7 @@
         <link href="//cdn.anpero.com/cdn/plugins/fancybox-3/src/css/core.css" rel="stylesheet" />
         <link href="//cdn.anpero.com/cdn/plugins/fancybox-3/src/css/fullscreen.css" rel="stylesheet" />
         @*<link rel="stylesheet" type="text/css" href="/assets/SamsungGrid/css/normalize.css" />
-        <link rel="stylesheet" type="text/css" href="/assets/SamsungGrid/css/component.css" />*@
+            <link rel="stylesheet" type="text/css" href="/assets/SamsungGrid/css/component.css" />*@
 
     }
     @section Styles {
@@ -53,17 +53,30 @@
             </div>
 
             <section class="grid-wrap" id="tab-description">
-                <div class="grid swipe-right owl-carousel-4 box-slide d-inline-flex" id="grid" >
+                <div class="grid swipe-right owl-carousel-4 box-slide d-inline-flex" id="grid">
 
                     @foreach (var imagesSlide in item.ImagesSlide)
                     {
 
                         <div class="item" style="padding-right:10px;padding-left:10px;"><a href="@imagesSlide" class="fancybox" data-fancybox="gallery" rel="gallery" data-type="image"><img src="@imagesSlide" alt="@item.PrName"></a></div>
                     }
-
                 </div>
             </section>
-
+            @if (item.ImagesSlide2 != null && item.ImagesSlide2.Length > 0)
+            {
+                <div class="text-center gallery" style="margin-top:45px;">
+                    <h1 class="font-bold-play-fair">Nhà tài trợ</h1>
+                    <div class="divgachxannh" style="width: 4%;margin-left: 48%;margin-bottom:10vh"></div>
+                </div>
+                <section class="grid-wrap" id="tab-description">
+                    <div class="grid swipe-right owl-carousel-6 box-slide d-inline-flex" id="grid">
+                        @foreach (var imagesSlide in item.ImagesSlide2)
+                        {
+                            <div class="item" style="padding-right:10px;padding-left:10px;"><a href="@imagesSlide.ImagesUrl" class="fancybox" data-fancybox="gallery" rel="gallery" data-type="image"><img src="@imagesSlide.ImagesUrl" alt="@item.PrName"></a></div>
+                        }
+                    </div>
+                </section>
+            }
         </div>
     }
     @section scripts{
@@ -71,9 +84,9 @@
         @*<script src="/assets/SamsungGrid/js/modernizr.custom.js"></script>*@
         <script src="//cdn.anpero.com/cdn/plugins/fancybox-3/dist/jquery.fancybox.min.js"></script>
         @*<script src="/assets/SamsungGrid/js/colorfinder-1.1.js"></script>
-        <script src="/assets/SamsungGrid/js/masonry.pkgd.min.js"></script>
-        <script src="/assets/SamsungGrid/js/imagesloaded.pkgd.min.js"></script>
-        <script src="/assets/SamsungGrid/js/classie.js"></script>*@
+            <script src="/assets/SamsungGrid/js/masonry.pkgd.min.js"></script>
+            <script src="/assets/SamsungGrid/js/imagesloaded.pkgd.min.js"></script>
+            <script src="/assets/SamsungGrid/js/classie.js"></script>*@
 
         @*<script src="/assets/SamsungGrid/js/gridScrollFx.js"></script>*@
         <script>
