--- a/17_Tour/Views/Home/IconList.cshtml
+++ b/17_Tour/Views/Home/IconList.cshtml
@@ -113,28 +113,28 @@
 
 
         <div class="col-md-3">
-            <img src="https://lh3.googleusercontent.com/AcfJJKBqipCwoGNTwkrFb7_K2pVuda5VM4iXYnThbeBcApsYzZOoJFl6rf55w3Oni70oJjEKGlwHQOHlgzcbuvgPWGCti-SJwU6yEnZlNt5gUkjDvWvW2pf7hvE3BL8aA7JZL2YpLf70P9ZZg_fqytbFdaynRCyaqf3BzHi8WzMrtwLbSm6tFeRKJ5IMhuf-x1WgUnFWLe7S2hHwAt0MeVejeguVfR4EopvLRjmpslhp1l_AV6tV7ZweLnTOCwh7beRsBsLK7Hx8m493_RIGv3VLItArQs9FJAbQGiruC_ZVJDeNHU9NEclYbkMiUNYLBXYTwtO4RII6uuWFvsFFUcMwZ8XN1WVnFPzgvpwfKh33lIi6NFyWcqjLswMUufOpjUp3uYVpPotW7Ots2JmCZgiEb6yk1b3lX16uIBfFOxvQ38XI1yB4PdnVsLbEzu2dLEcwUq9_WY7n5SS-hb77c0QoYkCBPcu9iqtkA1bK_hX7w8lzJX-53no9n2Eawb-HG0RiWPgVMlkYcqd8R_bxk3xa0yxmPwkuYRMlGBa7clKmQxQoIivHkNQtYJZw1inJ72chliRWUlxe91n3N4bJdGWrzyf_SDrWDgUdyuWHOW63bx4fyLb07IlItbQhuDFz-Fct0X-WdMRYujlbI5fD95rLo07CBE7Bp8rflFbikXx9kTID8oLXkw=w212-h211-no" style="width: 100%;margin-top: 20%;margin-bottom: 10%;" />
+            <img src="https://lh3.googleusercontent.com/AcfJJKBqipCwoGNTwkrFb7_K2pVuda5VM4iXYnThbeBcApsYzZOoJFl6rf55w3Oni70oJjEKGlwHQOHlgzcbuvgPWGCti-SJwU6yEnZlNt5gUkjDvWvW2pf7hvE3BL8aA7JZL2YpLf70P9ZZg_fqytbFdaynRCyaqf3BzHi8WzMrtwLbSm6tFeRKJ5IMhuf-x1WgUnFWLe7S2hHwAt0MeVejeguVfR4EopvLRjmpslhp1l_AV6tV7ZweLnTOCwh7beRsBsLK7Hx8m493_RIGv3VLItArQs9FJAbQGiruC_ZVJDeNHU9NEclYbkMiUNYLBXYTwtO4RII6uuWFvsFFUcMwZ8XN1WVnFPzgvpwfKh33lIi6NFyWcqjLswMUufOpjUp3uYVpPotW7Ots2JmCZgiEb6yk1b3lX16uIBfFOxvQ38XI1yB4PdnVsLbEzu2dLEcwUq9_WY7n5SS-hb77c0QoYkCBPcu9iqtkA1bK_hX7w8lzJX-53no9n2Eawb-HG0RiWPgVMlkYcqd8R_bxk3xa0yxmPwkuYRMlGBa7clKmQxQoIivHkNQtYJZw1inJ72chliRWUlxe91n3N4bJdGWrzyf_SDrWDgUdyuWHOW63bx4fyLb07IlItbQhuDFz-Fct0X-WdMRYujlbI5fD95rLo07CBE7Bp8rflFbikXx9kTID8oLXkw=w212-h211-no"/>
             <h4>Nguyễn Ho&agrave;ng H&agrave;</h4>
 
             <h6>TRƯỞNG BAN ẢNH B&Aacute;O ĐIỆN TỬ ZING NEWS</h6>
         </div>
 
         <div class="col-md-3">
-            <img src="https://lh3.googleusercontent.com/NOmLHnr6BDCytFYVRf9xL3FQgyxg0JQwV6aKsbdWHHrSSK7l8mb4d5-F8p6QV0JoJVvvE-ebMY_28dLgc3KPFea_oJpAF_Qiq02B91ib4kRLBjjiRzRsEhR8mU3I7fxilIrUxGzfHaT-p7-UD6fAAGftI-5dFtPHbNGKExDvaTjxoOsgIzDPHqQx29bR7OfOGlSsRdCaWqjDWHfEMn0EIWTfoBCm2CL_5lhiA5aD5O_M1bLynONAwSiQEDjRKbcXe4lj0xY9WuP42-4InW_4-lZN0OJgnS4MMoSQf9MYs6bUrJ3qYT2Aej4xVHnNLn1I7z2aRgg4VJPL_JxQDhItFzRRS_hOto8eVEHSzT8AGQngOhHQMav5PBtGp6i0PTo_X3Fo-gwe6fuDXKoRcAVdfDV8OClCvY-9IFOUTs8VmbYTUsSrqEo4uFaLUc2BasrV-7FFrivaH0rTdhQ8fA3vYo_KvS2jCTNbG13a3_725JtyywzYoYW4ByAdNynn9qkxqXHVjuX_QhrKvps0nPC13f-HQrnCF-WTTWrwsqvN2-_k1mteZUJLQprzupB9ZHA0FjmN2MNfM0OnWrqU6f2wrduDju4MY1RiLT2LzYUbfIMjf7n3HJQLmB4qkbN-X6lJL-g8cS4GgFVGa2FsP48j6RI1mLUI2WLg99E6v6vwXNN1xjNLD4dExQ=s211-no" style="width: 100%;margin-top: 20%;margin-bottom: 10%;" />
+            <img src="https://lh3.googleusercontent.com/NOmLHnr6BDCytFYVRf9xL3FQgyxg0JQwV6aKsbdWHHrSSK7l8mb4d5-F8p6QV0JoJVvvE-ebMY_28dLgc3KPFea_oJpAF_Qiq02B91ib4kRLBjjiRzRsEhR8mU3I7fxilIrUxGzfHaT-p7-UD6fAAGftI-5dFtPHbNGKExDvaTjxoOsgIzDPHqQx29bR7OfOGlSsRdCaWqjDWHfEMn0EIWTfoBCm2CL_5lhiA5aD5O_M1bLynONAwSiQEDjRKbcXe4lj0xY9WuP42-4InW_4-lZN0OJgnS4MMoSQf9MYs6bUrJ3qYT2Aej4xVHnNLn1I7z2aRgg4VJPL_JxQDhItFzRRS_hOto8eVEHSzT8AGQngOhHQMav5PBtGp6i0PTo_X3Fo-gwe6fuDXKoRcAVdfDV8OClCvY-9IFOUTs8VmbYTUsSrqEo4uFaLUc2BasrV-7FFrivaH0rTdhQ8fA3vYo_KvS2jCTNbG13a3_725JtyywzYoYW4ByAdNynn9qkxqXHVjuX_QhrKvps0nPC13f-HQrnCF-WTTWrwsqvN2-_k1mteZUJLQprzupB9ZHA0FjmN2MNfM0OnWrqU6f2wrduDju4MY1RiLT2LzYUbfIMjf7n3HJQLmB4qkbN-X6lJL-g8cS4GgFVGa2FsP48j6RI1mLUI2WLg99E6v6vwXNN1xjNLD4dExQ=s211-no"/>
             <h4>L&ecirc; Ngọc B&iacute;ch</h4>
 
             <h6>PH&Oacute;NG VI&Ecirc;N ẢNH</h6>
         </div>
 
         <div class="col-md-3">
-            <img src="https://lh3.googleusercontent.com/62BJS3j-73nCAcTT7GTHtkNt4K5D8SFOXeWucEtC61ih0ZfKsChpYnREMYFLYSXOBsmxQGc_wTDv87AwmBl7oZprXrQ6Bls7xTPvqcYJxCZXE9OkKijt2B5NWfRrPLOX01gPxDR3WXD9JKHRaO7Pf_H4AMTtcyPWUDgNVyJeA4GlRVVs_aD6yQ8MEQ78uJVYU784gcMpCblYFoV0sdIKf4LGdpktt6OjfHMAOmNTEl0gZP3yiYnuILxHyPZrK_0O-vpM81yUxKAgjnSi-NOZTdsl7vChRJUl8xvrMZBGMW8bYQFzcKLPlWqZalku4631lV6FWltO4K6XXaxbcynP13TueiV7hlB4SfnxQ-qstaYBpkOpQeQX8lLvdjc4twq1u-hFzBjeQLCJFzgeLYwCTAF3tW_mTANyPSI5ugjpowy6ce2_u2c28e9Du0xJ84CIPMQcpDRXOPVp_3pcj79Wldl3-ZyA6YlU6xLEb-LKGC3WvDXj5WVN_pKdz-SVkf0yHVDuhYaPPA4H3DxWUmyhuGQypKk2KjrN9mvvfK7GhJQaBYWDtuWieHLGpvywwZ_62hgjK_ELpNoPXSDnn1c0qhC2u5I1w6GxBQebfr_UkGeDh9VjRgt0TzLBp99GpHokGTn7oWwW4ri8XiFONd47xo7JNWkpkz-8mmnSiRvhCI4fcGSCnSfnKQ=s212-no" style="width: 100%;margin-top: 20%;margin-bottom: 10%;" />
+            <img src="https://lh3.googleusercontent.com/62BJS3j-73nCAcTT7GTHtkNt4K5D8SFOXeWucEtC61ih0ZfKsChpYnREMYFLYSXOBsmxQGc_wTDv87AwmBl7oZprXrQ6Bls7xTPvqcYJxCZXE9OkKijt2B5NWfRrPLOX01gPxDR3WXD9JKHRaO7Pf_H4AMTtcyPWUDgNVyJeA4GlRVVs_aD6yQ8MEQ78uJVYU784gcMpCblYFoV0sdIKf4LGdpktt6OjfHMAOmNTEl0gZP3yiYnuILxHyPZrK_0O-vpM81yUxKAgjnSi-NOZTdsl7vChRJUl8xvrMZBGMW8bYQFzcKLPlWqZalku4631lV6FWltO4K6XXaxbcynP13TueiV7hlB4SfnxQ-qstaYBpkOpQeQX8lLvdjc4twq1u-hFzBjeQLCJFzgeLYwCTAF3tW_mTANyPSI5ugjpowy6ce2_u2c28e9Du0xJ84CIPMQcpDRXOPVp_3pcj79Wldl3-ZyA6YlU6xLEb-LKGC3WvDXj5WVN_pKdz-SVkf0yHVDuhYaPPA4H3DxWUmyhuGQypKk2KjrN9mvvfK7GhJQaBYWDtuWieHLGpvywwZ_62hgjK_ELpNoPXSDnn1c0qhC2u5I1w6GxBQebfr_UkGeDh9VjRgt0TzLBp99GpHokGTn7oWwW4ri8XiFONd47xo7JNWkpkz-8mmnSiRvhCI4fcGSCnSfnKQ=s212-no"/>
             <h4>Đ&agrave;m Đức Vũ</h4>
 
             <h6>PH&Oacute;NG VI&Ecirc;N</h6>
         </div>
 
         <div class="col-md-3">
-            <img src="https://lh3.googleusercontent.com/8Cd_0NffNxNTPSIx008TqtANc326Ka4O5BJvzCPV7atxraq4oBFH3L614tT_jgeAdaS7vckApkxNXczU6YTqZLSCgje52FZtKgKV27SUxJjeLwtGF7qoyl5NVlceTDRm1Da51rBZBONPTD_HWjrDoFXzV9MCYvpXzHzUqoFGBiN4wWqTui-PlICrH9ogEsBIywHBgSy9kuhtSA7Xpy906LohTxAJS9BmqULoOBGYT-TMxeqo3zpEH3hg5IuWvuUzPprv_MJmBEljtOO8x4JpbW9D1Do1yJv0JIaxv-9Pd0a2uWs2SsRbC2AHL_aSl49NnS6VLs3K3bYYpyKvo3y3oL9kDvqAIsTYmJ2P1YR5UaqG7YpbbwwHDOGkA_AXinxr3dwnliL6JfzQJBflhRCjYsRlp36bFLCeI8FfcqqDaeBamdfqbQD6UYPBEpd8GseTIER1Qk7OTdzpZ1nGk8Pt_azUTpBk1CcSnItv4Q3doK1mMMXze2XMX6s-_Q9HuNIGcaP08lSogRgCWfzIfBowSTUleYeebNJX1EZboWdKfiEhr427LCSiCvaJMpYBCEZR7Da2j4XML4Vj7KHG6j-mLLDULN5qFaYsxXy44Q6botquaJKqaebW1hvDNdYCURa5yj0VyWSpKwQq11G0pIWsG7Rqw3flf6HVZn6-EVm8709U2lzpmnQOaA=s211-no" style="width: 100%;margin-top: 20%;margin-bottom: 10%;" />
+            <img src="https://lh3.googleusercontent.com/8Cd_0NffNxNTPSIx008TqtANc326Ka4O5BJvzCPV7atxraq4oBFH3L614tT_jgeAdaS7vckApkxNXczU6YTqZLSCgje52FZtKgKV27SUxJjeLwtGF7qoyl5NVlceTDRm1Da51rBZBONPTD_HWjrDoFXzV9MCYvpXzHzUqoFGBiN4wWqTui-PlICrH9ogEsBIywHBgSy9kuhtSA7Xpy906LohTxAJS9BmqULoOBGYT-TMxeqo3zpEH3hg5IuWvuUzPprv_MJmBEljtOO8x4JpbW9D1Do1yJv0JIaxv-9Pd0a2uWs2SsRbC2AHL_aSl49NnS6VLs3K3bYYpyKvo3y3oL9kDvqAIsTYmJ2P1YR5UaqG7YpbbwwHDOGkA_AXinxr3dwnliL6JfzQJBflhRCjYsRlp36bFLCeI8FfcqqDaeBamdfqbQD6UYPBEpd8GseTIER1Qk7OTdzpZ1nGk8Pt_azUTpBk1CcSnItv4Q3doK1mMMXze2XMX6s-_Q9HuNIGcaP08lSogRgCWfzIfBowSTUleYeebNJX1EZboWdKfiEhr427LCSiCvaJMpYBCEZR7Da2j4XML4Vj7KHG6j-mLLDULN5qFaYsxXy44Q6botquaJKqaebW1hvDNdYCURa5yj0VyWSpKwQq11G0pIWsG7Rqw3flf6HVZn6-EVm8709U2lzpmnQOaA=s211-no"/>
             <h4>Nguyễn Thị B&iacute;ch Thủy</h4>
 
             <h6>NH&Agrave; B&Aacute;O</h6>
@@ -143,28 +143,28 @@
 
 
         <div class="col-md-3">
-            <img src="https://lh3.googleusercontent.com/FnVSeXLhr849QBkoVYG4vbUdgADb797-_-HaxEZ6Xb5Q8S13ZQuqaC-UWBgFXc7pI5GYl5vaas7WLKEwEUnnQzdgaTX-EUt40GKoIfH4nqf1vznP76JOHEHPylTWOwcIQFZxJvqfFwXuywXcgfAMCWBo4YRnBk3rszNLQO6t6fxZPukyqoQT_CWMMrJpZr75y0BJHskF3xG4qyQaiTnca-LjYzJRQ9GWWGlYjoRzwB0k_Lj-cM2dFw9KeiWPGsK1OLTOpECrA5Ixof-9RG4pvq4NqoRTtgb7UGOdg5yyssctP2vULVZd5A7vzyvGcX6SaXifs4oBv_5OQdnht-ex1V0BiwZb8Oc_rSpPUgUPIxowvVkdHRDg35GvCLEylFUlm-dlkeNz8zM3Jw5q3-hdca0WCXuia8zvcynORBlEqjv5cgvwKC4qw3v8gyP5XLbqgxwUM_6yVmNv3IZL1Hk05g0v4wIzeVGcLyRRgib4-dqDEclQfKotp5hzDkw6icqcprUq7hRY3r1KcV6YyvNX4Tcu2-q-HbPND-Nk8DRU51kViB2QDTIhZijpeWFe8HARgMr-J0Fo9hLWydff4cP90g2jXoirz4Am4hmMTuJAh2mKBKxYRZUN9933EqcHx-6GgIm42BBQLLmJPrsONN5WDhhfsrhfLbBOfT3_krviQbnAxLqq7CHiyw=w212-h211-no" style="width: 100%;margin-top: 20%;margin-bottom: 10%;" />
+            <img src="https://lh3.googleusercontent.com/FnVSeXLhr849QBkoVYG4vbUdgADb797-_-HaxEZ6Xb5Q8S13ZQuqaC-UWBgFXc7pI5GYl5vaas7WLKEwEUnnQzdgaTX-EUt40GKoIfH4nqf1vznP76JOHEHPylTWOwcIQFZxJvqfFwXuywXcgfAMCWBo4YRnBk3rszNLQO6t6fxZPukyqoQT_CWMMrJpZr75y0BJHskF3xG4qyQaiTnca-LjYzJRQ9GWWGlYjoRzwB0k_Lj-cM2dFw9KeiWPGsK1OLTOpECrA5Ixof-9RG4pvq4NqoRTtgb7UGOdg5yyssctP2vULVZd5A7vzyvGcX6SaXifs4oBv_5OQdnht-ex1V0BiwZb8Oc_rSpPUgUPIxowvVkdHRDg35GvCLEylFUlm-dlkeNz8zM3Jw5q3-hdca0WCXuia8zvcynORBlEqjv5cgvwKC4qw3v8gyP5XLbqgxwUM_6yVmNv3IZL1Hk05g0v4wIzeVGcLyRRgib4-dqDEclQfKotp5hzDkw6icqcprUq7hRY3r1KcV6YyvNX4Tcu2-q-HbPND-Nk8DRU51kViB2QDTIhZijpeWFe8HARgMr-J0Fo9hLWydff4cP90g2jXoirz4Am4hmMTuJAh2mKBKxYRZUN9933EqcHx-6GgIm42BBQLLmJPrsONN5WDhhfsrhfLbBOfT3_krviQbnAxLqq7CHiyw=w212-h211-no"/>
             <h4>Nguyễn Thị Hải H&agrave;</h4>
 
             <h6>ĐẠI DIỆN TẠP CH&Iacute; TRAVELLIVE</h6>
         </div>
 
         <div class="col-md-3">
-            <img src="https://lh3.googleusercontent.com/EQENzmjNHu8ZKPUPTgZ1vKnb8CQnvUxkH_Lk6dRG-4qXTAYcsrwiE28At5KfxJLOGpyZ9UTBaWbVmdoTEG5yfwQeaR42QHUroZVoje6elZgf11QvrrAdaDaLs0Tm4X8fUggF6CVEsFKzRH4hMAuSfyxGSZlGLKTb4D2OX_xYBOqt1JwTkXyENBShoCGBNS08UzDtKXhm554TpTFHV_CDwxDrY9_MzFTce5vy5O2pjBf2NW5-IukQIQUcT41RB3t7bXXcNnMYT--Hgd5Oamp6kn8SMYu2zyJX1oZOUK4taV7daa6WZQ7BU-y64MCCd82X_WC2IESbqwLpWTaenQgIJPvs4aZksS1mptzJqMzFNIzHL6QVoB0Whd06S1OV_HNHLEUL6ChyHCqlEzxCeA3uUILi8qJuTpY-8S4eyy0ar9mJkTZcUz1qDeF9GrtbBmmCG-4l4nPHd3d9Kecf09XjCjypMqsU2sPW9lflyW2X4IQB_Pb0yfbAdpClus4Omd3OZ6L-0UQMvkzprEKmYAAUJShn2wEFQ5EtpSSt27npL1ls-ZfUGwCZcfkVcYG0xys8sW7fMUT7UScTlZIZzHViy5mB0SuhOFUmAXWI5dodkKLZ9Pd4S0uimKMoNOxquJYjoATdRHjka-YTe-eZW7nOBUK4hwPRzPpXqXAk89zw2OaGBtfRwT_ivw=s211-no" style="width: 100%;margin-top: 20%;margin-bottom: 10%;" />
+            <img src="https://lh3.googleusercontent.com/EQENzmjNHu8ZKPUPTgZ1vKnb8CQnvUxkH_Lk6dRG-4qXTAYcsrwiE28At5KfxJLOGpyZ9UTBaWbVmdoTEG5yfwQeaR42QHUroZVoje6elZgf11QvrrAdaDaLs0Tm4X8fUggF6CVEsFKzRH4hMAuSfyxGSZlGLKTb4D2OX_xYBOqt1JwTkXyENBShoCGBNS08UzDtKXhm554TpTFHV_CDwxDrY9_MzFTce5vy5O2pjBf2NW5-IukQIQUcT41RB3t7bXXcNnMYT--Hgd5Oamp6kn8SMYu2zyJX1oZOUK4taV7daa6WZQ7BU-y64MCCd82X_WC2IESbqwLpWTaenQgIJPvs4aZksS1mptzJqMzFNIzHL6QVoB0Whd06S1OV_HNHLEUL6ChyHCqlEzxCeA3uUILi8qJuTpY-8S4eyy0ar9mJkTZcUz1qDeF9GrtbBmmCG-4l4nPHd3d9Kecf09XjCjypMqsU2sPW9lflyW2X4IQB_Pb0yfbAdpClus4Omd3OZ6L-0UQMvkzprEKmYAAUJShn2wEFQ5EtpSSt27npL1ls-ZfUGwCZcfkVcYG0xys8sW7fMUT7UScTlZIZzHViy5mB0SuhOFUmAXWI5dodkKLZ9Pd4S0uimKMoNOxquJYjoATdRHjka-YTe-eZW7nOBUK4hwPRzPpXqXAk89zw2OaGBtfRwT_ivw=s211-no"/>
             <h4>Nguyễn Quang Tuấn</h4>
 
             <h6>PHOTOGRAPHER</h6>
         </div>
 
         <div class="col-md-3">
-            <img src="https://lh3.googleusercontent.com/WiKk7F1F0CGQ-WQ_eg_usTKVt1kLFbRMpEpRfEkS5zxAd8g7ipIxsHFOpp50J3_xr0jHaEnKE3SiHSzSiUQ85SWYSPb2RdcKqC6k496UEedvdz4hvIh9g6cfI805nJ246f69yl1YJCS7r9nLvubE6NwzhM_nVuOCEDy9drXgDOAVknPxfigHcS1VkWIxzmaPsemzOj1QNoTM6eCxH_Fhhbkibcn4XjY13uOiLmvT1eZ7Yde9PnenBJLpKUblq7yMTdPYEKo7kW1E_5XNXFl2B-6e9OYmuRoEWx5EEOzx84Y15AVMQCiizqNArqy_Z-52QL7OeRVpjSxyA7FKf23GWl9WjBy0_Q4lnpUNU9tftBtlS9myyOMxtOc8Hc3PLTHAquzYCmlegqRUoYDldul7J3AgwgZPR8B49ZZ898ImJO_3Y5Dspcz95uhT4Sl-kq-MJek0loR9vT_4z5aza8anKgSnstVginHMACZ7LA9Dy6xKU6sbm8ofgdmTfHsUvMd8nm1mCFQikhKIsfY-Kfr0JHjCm_Yng8O70XocfezkUwsoYnpRZOjomQDuWbiG2-EcGoA37GTr8U7_KsrIPyfZbvyVuDxGy4a2nWJYubth0XeX9GtfORjl4HZpfR0XWKLUJqQ-Ecq55Q1PQkIRFqyiyaKB0HogPPcTovCAUgxmTBwem3aYBA32aA=s211-no" style="width: 100%;margin-top: 20%;margin-bottom: 10%;" />
+            <img src="https://lh3.googleusercontent.com/WiKk7F1F0CGQ-WQ_eg_usTKVt1kLFbRMpEpRfEkS5zxAd8g7ipIxsHFOpp50J3_xr0jHaEnKE3SiHSzSiUQ85SWYSPb2RdcKqC6k496UEedvdz4hvIh9g6cfI805nJ246f69yl1YJCS7r9nLvubE6NwzhM_nVuOCEDy9drXgDOAVknPxfigHcS1VkWIxzmaPsemzOj1QNoTM6eCxH_Fhhbkibcn4XjY13uOiLmvT1eZ7Yde9PnenBJLpKUblq7yMTdPYEKo7kW1E_5XNXFl2B-6e9OYmuRoEWx5EEOzx84Y15AVMQCiizqNArqy_Z-52QL7OeRVpjSxyA7FKf23GWl9WjBy0_Q4lnpUNU9tftBtlS9myyOMxtOc8Hc3PLTHAquzYCmlegqRUoYDldul7J3AgwgZPR8B49ZZ898ImJO_3Y5Dspcz95uhT4Sl-kq-MJek0loR9vT_4z5aza8anKgSnstVginHMACZ7LA9Dy6xKU6sbm8ofgdmTfHsUvMd8nm1mCFQikhKIsfY-Kfr0JHjCm_Yng8O70XocfezkUwsoYnpRZOjomQDuWbiG2-EcGoA37GTr8U7_KsrIPyfZbvyVuDxGy4a2nWJYubth0XeX9GtfORjl4HZpfR0XWKLUJqQ-Ecq55Q1PQkIRFqyiyaKB0HogPPcTovCAUgxmTBwem3aYBA32aA=s211-no"/>
             <h4>L&ecirc; Thu Quỳnh</h4>
 
             <h6>GĐ NỘI DUNG TRAVELLIVE MAGAZINE</h6>
         </div>
 
         <div class="col-md-3">
-            <a class="lazy" href="https://cdn.anpero.com/images/59/22020/tranhoanglinh2020022102445648.jpg"><img src="https://cdn.anpero.com/images/59/22020/tranhoanglinh2020022102445648.jpg" style="width: 100%;margin-top: 20%;margin-bottom: 10%;border-radius: 50%;" /></a>
+            <a class="lazy" href="https://cdn.anpero.com/images/59/22020/tranhoanglinh2020022102445648.jpg"><img src="https://cdn.anpero.com/images/59/22020/tranhoanglinh2020022102445648.jpg"/></a>
 
             <h4>Trần Ho&agrave;ng Linh</h4>
 
