--- a/17_Tour/Views/Shared/_Layout.cshtml
+++ b/17_Tour/Views/Shared/_Layout.cshtml
@@ -186,6 +186,7 @@
         }
         function googleTranslateElementInit2() { new google.translate.TranslateElement({ pageLanguage: 'vi', autoDisplay: false }, 'google_translate_element2'); }
         $(document).ready(function () {
+
             $('.owl-carousel-1').owlCarousel({
                 itemsCustom: [
                     [320, 1],
@@ -226,6 +227,12 @@
     <style>
         #google_translate_element2, .goog-te-banner-frame, .skiptranslate {
             display: none;
+        }
+        .owl-carousel{
+            overflow:hidden;
+        }
+        .col-md-3 h4{
+            margin-top:20px;
         }
     </style>
 </body>
