--- a/17_Tour/Views/Product/Index.cshtml
+++ b/17_Tour/Views/Product/Index.cshtml
@@ -53,7 +53,7 @@
             </div>
 
             <section class="grid-wrap" id="tab-description">
-                <div class="grid swipe-right owl-carousel-4 box-slide d-inline-flex" id="grid">
+                <div class="grid swipe-right owl-carousel-3 box-slide d-inline-flex" id="grid">
 
                     @foreach (var imagesSlide in item.ImagesSlide)
                     {
@@ -64,15 +64,17 @@
             </section>
             @if (item.ImagesSlide2 != null && item.ImagesSlide2.Length > 0)
             {
-                <div class="text-center gallery" style="margin-top:45px;">
-                    <h1 class="font-bold-play-fair">Nhà tài trợ</h1>
-                    <div class="divgachxannh" style="width: 4%;margin-left: 48%;margin-bottom:10vh"></div>
-                </div>
-                <section class="grid-wrap" id="tab-description">
-                    <div class="grid swipe-right owl-carousel-6 box-slide d-inline-flex" id="grid">
+                @*<div class="text-center gallery" style="margin-top:45px;">
+                        <h1 class="font-bold-play-fair">Nhà tài trợ</h1>
+                        <div class="divgachxannh" style="width: 4%;margin-left: 48%;margin-bottom:10vh"></div>
+                    </div>*@
+                <section class="grid-wrap text-center" id="tab-description">
+                    <div class="grid swipe-right owl-carousel-8 box-slide d-inline-flex" id="grid">
                         @foreach (var imagesSlide in item.ImagesSlide2)
                         {
-                            <div class="item" style="padding-right:10px;padding-left:10px;"><a href="@imagesSlide.ImagesUrl" class="fancybox" data-fancybox="gallery" rel="gallery" data-type="image"><img src="@imagesSlide.ImagesUrl" alt="@item.PrName"></a></div>
+                            <div class="item"><a href="@imagesSlide.ImagesUrl" class="fancybox" data-fancybox="gallery" rel="gallery" data-type="image">
+                                <img src="@imagesSlide.ImagesUrl" alt="@item.PrName"></a>
+                            </div>
                         }
                     </div>
                 </section>
@@ -90,7 +92,30 @@
 
         @*<script src="/assets/SamsungGrid/js/gridScrollFx.js"></script>*@
         <script>
+
             $(document).ready(function () {
+                $('.owl-carousel-3').owlCarousel({
+                    itemsCustom: [
+                        [320, 2],
+                        [600, 2],
+                        [768, 2],
+                        [1024, 3],
+                        [1200, 3]
+                    ],
+                    navigation: true,
+                    autoPlay: true
+                });
+                $('.owl-carousel-8').owlCarousel({
+                    center: true,
+                    itemsCustom: [                        
+                        [768, 4],
+                        [1024, 8],
+                        [1200, 8]
+                    ],
+                    navigation: true,
+                    autoPlay: true
+                });
+                 
                 //new GridScrollFx(document.getElementById('grid'), {
                 //    viewportFactor: 0.4
                 //});
